--- a/_posts/2021-10-16-#02.md
+++ b/_posts/2021-10-16-#02.md
@@ -26,7 +26,8 @@ For being able to store our user's data we also need a database system which wil
 Last but not least we would like the user authentication to happen via the student's email addresses. Because none of us has ever done something like this before and we think that it is a more complex topic, we decided to work on this aspect later.
 
 All in all our technology stack looks/will look like this:
-[Bild]
+
+![Technology Stack](/tech-stack.png)
 
 # RUP Roles
 
