--- a/_posts/2021-10-16-#02.md
+++ b/_posts/2021-10-16-#02.md
@@ -27,7 +27,7 @@ Last but not least we would like the user authentication to happen via the stude
 
 All in all our technology stack looks/will look like this:
 
-![Technology Stack](/tech-stack.png)
+![Technology Stack](/assets/images/02-tech-stack.png)
 
 # RUP Roles
 
