changed asset reference to doc repo

--- a/_posts/2021-10-16-#02.md
+++ b/_posts/2021-10-16-#02.md
@@ -27,7 +27,7 @@ Last but not least we would like the user authentication to happen via the stude
 
 All in all our technology stack looks/will look like this:
 
-![Technology Stack](/assets/images/02-tech-stack.png)
+![Technology Stack](https://raw.githubusercontent.com/DHBW-Experts/documents/main/tech-stack.png)
 
 # RUP Roles
 
@@ -38,6 +38,5 @@ Ralph - Integrator
 Lukas - Deployment
 
 Noah - Software Architect
-
 
 We look forward to receiving your feedback!
