added blog post #03

--- a/_posts/2021-10-16-#03.md
+++ b/_posts/2021-10-16-#03.md
@@ -1,5 +1,5 @@
 ---
-title: "02: Tech Stack + RUP Roles"
+title: "03: About use-cases and relationships"
 last_modified_at: 2021-10-25T00:00:00-05:00
 categories:
   - Blog
@@ -12,3 +12,36 @@ tags:
 ---
 
 Hi there!
+
+Within the last couple of days our team discussed many different functions our app could possibly cover and thought about useful use-cases that derive out of these functions.
+
+Furthermore, we started to be productive and set-up the memory of our application: The Database.
+
+## Use-Case Diagram
+
+First of all, we refined the different refined the different software requirements we specified in our SRS. Building on this we defined many possible Use-Cases and reduced them to a dozen. These dozen use-cases were analyzed based on their complexity and their dependencies to other tasks and were then split up between the scope of the ongoing and the coming semester.
+
+Our main focus during the 3rd semester will be on delivering a working executable app with an intuitive UI that enables the user to register, login and logout and create a user profile.
+
+During the 4th semester it is our goal to add the main functionality to the App, like searching for expertise among other users and being able to scan someone’s student-id on the campus.
+
+![Use-Case-Diagram](https://raw.githubusercontent.com/DHBW-Experts/documents/main/UseCase-Diagram.jpg)
+
+## Database setup and ER-Diagram
+
+After we’ve done that, we had some time left and decided to design an entity relationship diagram for our database, so that everyone adjust and fit their future work to the model.
+
+![ER-Diagram](https://raw.githubusercontent.com/DHBW-Experts/documents/main/ER-Diagram.jpg)
+
+Our Database will consist of four tables:
+
+- USER: obvious data aside, here is stored, whether a user account is confirmed via an DHBW-email address, the password hash and the unique RFID card ID if the user decides to link their student ID to the account.
+- TAG: In this table, we will store every skilltag one user gives oneself.
+- TAG-VALIDATION: This table will store comments that users can write to either approve or reject the skills that other users give themselves.
+- DHBW: Contains just the unique email domain for every DHBW. E.g. @student.dhbw-karlsruhe.de
+
+Lastly, we realized the database with Azure. Luckily every student receives a balance of 100$ and is able to setup many servers free of charge during their study.
+
+![Azure Portal](/assets/images/azure-screenshot.png)
+
+Up Next: writing a database API and starting to design the app.
