--- a/_posts/2021-10-16-#03.md
+++ b/_posts/2021-10-16-#03.md
@@ -19,7 +19,7 @@ Furthermore, we started to be productive and set-up the memory of our applicatio
 
 ## Use-Case Diagram
 
-First of all, we refined the different refined the different software requirements we specified in our SRS. Building on this we defined many possible Use-Cases and reduced them to a dozen. These dozen use-cases were analyzed based on their complexity and their dependencies to other tasks and were then split up between the scope of the ongoing and the coming semester.
+First of all, we refined the different software requirements we specified in our [SRS](https://github.com/DHBW-Experts/documents). Building on this we defined many possible Use-Cases and reduced them to a dozen. These dozen use-cases were analyzed based on their complexity and their dependencies to other tasks and were then split up between the scope of the ongoing and the upcoming semester.
 
 Our main focus during the 3rd semester will be on delivering a working executable app with an intuitive UI that enables the user to register, login and logout and create a user profile.
 
