--- a/_posts/2021-10-31-#04.md
+++ b/_posts/2021-10-31-#04.md
@@ -15,7 +15,7 @@ tags:
 Hi there!
 
 This week we worked on our use case specification. We chose some of our use cases and added all the necessary details to it. This includes a text based description of the use case and a basic description of the activity flow, but also a mockup of our user interface and an activity diagram. If you want to take a closer look at our work, we have linked the use case specification down below, feel free to have a look at them.
-Just as the SRS, these use case specifications are living documents, so don't be surprised if come across a "TODO" in these documents :-).
+Just as the SRS, these use case specifications are living documents, so don't be surprised if you come across a "TODO" in these documents :-).
 
 - [Use case: fill out user profile](https://github.com/DHBW-Experts/documents/blob/main/use_case_Fill-out-user-profile.md)
 
