fixed image reference

--- a/_posts/2021-11-07-#06.md
+++ b/_posts/2021-11-07-#06.md
@@ -24,7 +24,7 @@ The Diagrams should be rather self-explanatory, so have a look! Feel free to ask
 
 You can find our Dashboard either on our [YouTrack project landing page](https://dhbw-karlsruhe.myjetbrains.com/youtrack/projects/a083958c-208a-4101-ae18-0a908553b15d) or on its dedicated site [here](https://dhbw-karlsruhe.myjetbrains.com/youtrack/dashboard?id=f7adb58a-d837-4096-9bb0-dd0ca3529ab0).
 
-![Dashboard](/assets/images/YouTrack-dashboard.PNG)
+![Dashboard](/assets/images/YouTrack-dashboard.png)
 
 # App Designs
 
