changed out svg with pngs due to font error

--- a/_posts/2021-11-07-#06.md
+++ b/_posts/2021-11-07-#06.md
@@ -33,14 +33,14 @@ Luckily, I have access to [Adobes UI/UX-Design Tool Xd](https://www.adobe.com/de
 Although I would have loved to publish the clickable models for you to try, my Adobe Plan won’t let me do that, so I threw in some screenshots down below. We are excited for your thoughts and feedback!
 
 <p align="middle">
-  <img src="https://raw.githubusercontent.com/DHBW-Experts/documents/main/UI/Anmelden.svg" width="175" />
-  <img src="https://raw.githubusercontent.com/DHBW-Experts/documents/main/UI/Registrieren.svg" width="175" /> 
-  <img src="https://raw.githubusercontent.com/DHBW-Experts/documents/main/UI/Verifizieren.svg" width="175" />
+  <img src="https://raw.githubusercontent.com/DHBW-Experts/documents/main/UI/Anmelden.png" width="175" />
+  <img src="https://raw.githubusercontent.com/DHBW-Experts/documents/main/UI/Registrieren.png" width="175" /> 
+  <img src="https://raw.githubusercontent.com/DHBW-Experts/documents/main/UI/Verifizieren.png" width="175" />
 </p>
 <p align="middle">
-  <img src="https://raw.githubusercontent.com/DHBW-Experts/documents/main/UI/Profil.svg" width="175" />
-  <img src="https://raw.githubusercontent.com/DHBW-Experts/documents/main/UI/Kontakte.svg" width="175" /> 
-  <img src="https://raw.githubusercontent.com/DHBW-Experts/documents/main/UI/Suche.svg" width="175" />
+  <img src="https://raw.githubusercontent.com/DHBW-Experts/documents/main/UI/Profil.png" width="175" />
+  <img src="https://raw.githubusercontent.com/DHBW-Experts/documents/main/UI/Kontakte.png" width="175" /> 
+  <img src="https://raw.githubusercontent.com/DHBW-Experts/documents/main/UI/Suche.png" width="175" />
 </p>
 
 See you next week!
