fixed links and minor typos

--- a/_posts/2021-10-16-#02.md
+++ b/_posts/2021-10-16-#02.md
@@ -4,12 +4,9 @@ last_modified_at: 2021-10-16T00:00:00-05:00
 categories:
   - Blog
 tags:
-  - database
-  - app
-  - rfid
-  - ionic
-  - ios
-  - android
+  - tech-stack
+  - rup
+  - rup-roles
 ---
 
 Hi there!
@@ -31,12 +28,12 @@ All in all our technology stack looks/will look like this:
 
 # RUP Roles
 
-Tim - Configuration Manager
+Tim - Project Manager, Systems Analyst
 
-Ralph - Integrator
+Ralph - Integrator, Implementer
 
-Lukas - Deployment
+Lukas - Configuration Manager, Graphic Artist, Deployment Manager
 
-Noah - Software Architect
+Noah - Software Architect, Code Reviewer
 
 We look forward to receiving your feedback!
