--- a/_posts/2021-10-16-#03.md
+++ b/_posts/2021-10-16-#03.md
@@ -25,7 +25,7 @@ Our main focus during the 3rd semester will be on delivering a working executabl
 
 During the 4th semester it is our goal to add the main functionality to the App, like searching for expertise among other users and being able to scan someone’s student-id on the campus.
 
-![Use-Case-Diagram](https://raw.githubusercontent.com/DHBW-Experts/documents/main/UseCase-Diagram.jpg)
+![Use-Case-Diagram](https://raw.githubusercontent.com/DHBW-Experts/documents/main/UseCases/UseCase-Diagram.jpg)
 
 ## Database setup and ER-Diagram
 
@@ -39,6 +39,7 @@ Our Database will consist of four tables:
 - TAG: In this table, we will store every skilltag one user gives oneself.
 - TAG-VALIDATION: This table will store comments that users can write to either approve or reject the skills that other users give themselves.
 - DHBW: Contains just the unique email domain for every DHBW. E.g. @student.dhbw-karlsruhe.de
+- CONTACT: Will store contact relations between users
 
 Lastly, we realized the database with Azure. Luckily every student receives a balance of 100$ and is able to setup many servers free of charge during their study.
 
