--- a/_posts/2021-10-31-#04.md
+++ b/_posts/2021-10-31-#04.md
@@ -17,16 +17,21 @@ Hi there!
 This week we worked on our use case specification. We chose some of our use cases and added all the necessary details to it. This includes a text based description of the use case and a basic description of the activity flow, but also a mockup of our user interface and an activity diagram. If you want to take a closer look at our work, we have linked the use case specification down below, feel free to have a look at them.
 Just as the SRS, these use case specifications are living documents, so don't be surprised if you come across a "TODO" in these documents :-).
 
-- [Use case: fill out user profile](https://github.com/DHBW-Experts/documents/blob/main/use_case_Fill-out-user-profile.md)
+![Use-Case-Diagram](https://raw.githubusercontent.com/DHBW-Experts/documents/main/UseCases/UseCase-Diagram.jpg)
 
-  This use case includes filling out a user profile when creating an account on the one hand and editing a user profile once an account has been created on the other hand. These two require the same user interface and very similar logic.
+- [Use case: fill out user profile](https://github.com/DHBW-Experts/documents/blob/main/UseCases/use_case_Fill-out-user-profile.md)
 
-- [Use case: verify email address](https://github.com/DHBW-Experts/documents/blob/main/use_case_Authenticate-Email.md)
+- [Use case: edit skilltag](https://github.com/DHBW-Experts/documents/blob/main/UseCases/use_case_Edit-skilltag-in-user-profile.md)
 
-## Mockups
+- [Use case: find users by skilltag](https://github.com/DHBW-Experts/documents/blob/main/UseCases/use_case_Find-others-by-skilltags.md)
 
-We decided to use [Invision](https://www.invisionapp.com/) to create our UI mockups. They offer a variety of premade ui components, that you can then arrange and customize to your needs.
+- [Use case: validate email address](https://github.com/DHBW-Experts/documents/blob/main/UseCases/use_case_Authenticate-Email.md)
+
+## Wireframes
+
+We decided to use [Invision](https://www.invisionapp.com/) to create our UI Wireframes. They offer a variety of premade ui components, that you can then arrange and customize to your needs.
 The results can be seen in the use case specifications linked above.
+Lukas will take those wireframes to create a more refined mockup.
 
 ## User interface
 
