--- a/_posts/2021-11-07-#05.md
+++ b/_posts/2021-11-07-#05.md
@@ -5,11 +5,8 @@ categories:
   - Blog
 tags:
   - use-case
-  - database
-  - azure
-  - user-interface
-  - API
-  - mockup
+  - narrative
+  - diagram
 ---
 
 Meddl Leude!
@@ -17,7 +14,7 @@ Meddl Leude!
 Today we want to present our Narratives and Use Cases to you.
 Because it would take too long to talk about every single one, we will focus on one example: the email verification process. If you are interested in the other ones, feel free to take a look at our [GitHub repository](https://github.com/DHBW-Experts/documents).
 
-After entering their data in the registration form, our users have to click the button "Registrierung abschließen" to get to the final step of the registration process. In the background, the webserver will generate a random verification code, save it in the database and send an email with the generated code to the email address entered in the form. As soon as he has received the mail, the user has to enter the code to complete the registration process and activate his profile.
+After entering ones data in the registration form, our users have to click the button "Registrierung abschließen" to get to the final step of the registration process. In the background, the webserver will generate a random verification code, save it in the database and send an email with the generated code to the email address entered in the form. As soon as he has received the mail, the user has to enter the code to complete the registration process and activate his profile.
 If he enters a wrong code, the app will show an error message and lets the user decide whether he want to get a new verification code or go back to the registration page.
 
 ![Organization Application Activity Diagram](https://raw.githubusercontent.com/DHBW-Experts/documents/main/ActivityDiagrams/verifyEmail.svg)
