--- a/_posts/2021-11-24-#08.md
+++ b/_posts/2021-11-24-#08.md
@@ -28,7 +28,7 @@ Now on to the things that don't work yet and need to be improved upon:
 How do we plan on improving?
 
 - we will be more concrete about distributing roles in our team. For the next semester, we also plan to implement end-to-end responsibility
-- we will rework our scope and set more realistic goals that we can achieve in the remaining time in the first semester
-- there's not that much we can do about the language barrier, other than just spending more time with the language and getting familiar with it
+- we will rework our scope and set more realistic goals that we can achieve in the remaining time in the first semester (Lukas from the future here: everything worked out as scheduled in the end of the first semester, so no need to wory :) ) 
+- there's not that much we can do about typescript being a little difficult for firsttimers, other than just spending more time with the language and getting familiar with it
 
 all of these details were elaborated during the retrospective and in collaboration with another group.
