--- a/_posts/2021-12-07-#09.md
+++ b/_posts/2021-12-07-#09.md
@@ -5,7 +5,10 @@ categories:
   - Blog
 tags:
   - improvement
-  - Retrospective
+  - ionic
+  - debugging
+  - class-diagram
+  - errors
 ---
 
 Ahoi,
@@ -14,6 +17,10 @@ instead of working as it should and letting us get on with our work, our app dec
 
 The framework which was resposible for the dilemma is Ionic in combination with Angular. It is TypeScript based and supports CRUD. Unfortunately, there is no way to auto-generate CRUD and we have to implement it manually (which luckily doesn't take much time :) ).
 
-For our class diagram we used the VSCode extension classdiagram-ts by AlexShen. The diagram can be found on [our GitHub](https://github.com/DHBW-Experts/documents/blob/main/app_diagram.png).
+For our class diagram we used the VSCode extension classdiagram-ts by AlexShen.
+
+![our GitHub](https://raw.githubusercontent.com/DHBW-Experts/documents/main/app_diagram.png)
+Looks neat right? ;)
+Just kidding, click [here](https://github.com/DHBW-Experts/documents/blob/main/app_diagram.png) to get a larger view.
 
 Last but not least our Software Architecture Document can be found on [GitHub](https://github.com/DHBW-Experts/documents/blob/main/SAD.md) too.
