--- a/_posts/2021-11-07-#06.md
+++ b/_posts/2021-11-07-#06.md
@@ -18,11 +18,11 @@ This week we will present you rather little text and more visuals: statistics an
 
 # Project Statistics
 
-As required by this week’s lecture we created some interesting diagrams on YouTrack to track the progress we make on our project.
+As required by this week’s lecture we created some interesting diagrams on YouTrack to track the progress we made on our project.
 
-The Diagrams should be rather self-explanatory, so have a look! Feel free to ask questions and give us feedback if you can think of something we could add.
+The diagrams should be rather self-explanatory, so have a look! Feel free to ask questions and give us feedback if you can think of something we could add.
 
-You can find our Dashboard either on our [YouTrack project landing page](https://dhbw-karlsruhe.myjetbrains.com/youtrack/projects/a083958c-208a-4101-ae18-0a908553b15d) or on its dedicated site [here](https://dhbw-karlsruhe.myjetbrains.com/youtrack/dashboard?id=f7adb58a-d837-4096-9bb0-dd0ca3529ab0).
+You can find our dashboard either on our [YouTrack project landing page](https://dhbw-karlsruhe.myjetbrains.com/youtrack/projects/a083958c-208a-4101-ae18-0a908553b15d) or on its dedicated site [here](https://dhbw-karlsruhe.myjetbrains.com/youtrack/dashboard?id=f7adb58a-d837-4096-9bb0-dd0ca3529ab0).
 
 ![Dashboard](/assets/images/YouTrack-dashboard.png)
 
