corrected spelling mistake

--- a/_posts/2022-04-06-#2.1.md
+++ b/_posts/2022-04-06-#2.1.md
@@ -14,7 +14,7 @@ As we went through our project code, we also thought about our distribution of a
 - Ralph: programmer for typescript and the UI
 - Tim: joining Ralph in coding
 - Lukas: developing our backend and the database
-- Noah: also coding and fix the configuration of the project, so everyone can deploy it on his local computer
+- Noah: also coding and fixing the configuration of the project, so everyone can deploy it on his local computer
 
 Of course this might change during the semester, but for now that's it.
 To get started, we then created our first tickets in 'YouTrack' and started the sprint. 
