--- a/_posts/2021-10-16-#03.md
+++ b/_posts/2021-10-16-#03.md
@@ -1,6 +1,7 @@
 ---
 title: "03: About use-cases and relationships"
 last_modified_at: 2021-10-25T00:00:00-05:00
+author: Lukas Holler
 categories:
   - Blog
 tags:
