--- a/_posts/2021-11-07-#05.md
+++ b/_posts/2021-11-07-#05.md
@@ -1,6 +1,7 @@
 ---
 title: "05: Narratives & Use Cases"
 last_modified_at: 2021-11-07T00:00:00-05:00
+author: Noah Kilders
 categories:
   - Blog
 tags:
