--- a/_posts/2021-11-20-#07.md
+++ b/_posts/2021-11-20-#07.md
@@ -1,6 +1,7 @@
 ---
 title: "07: Class Diagram and DB scheme"
 last_modified_at: 2021-11-20T00:00:00-05:00
+author: Tim Czerkas
 categories:
   - Blog
 tags:
