--- a/_posts/2021-10-16-#02.md
+++ b/_posts/2021-10-16-#02.md
@@ -1,6 +1,7 @@
 ---
 title: "02: Tech Stack + RUP Roles"
 last_modified_at: 2021-10-16T00:00:00-05:00
+author: Noah Kilders
 categories:
   - Blog
 tags:
