--- a/_posts/2021-10-31-#04.md
+++ b/_posts/2021-10-31-#04.md
@@ -1,6 +1,7 @@
 ---
 title: "04: Use cases in detail"
 last_modified_at: 2021-10-31T00:00:00-05:00
+author: Ralph Böhm
 categories:
   - Blog
 tags:
