--- a/_posts/2022-04-26-#2.3.md
+++ b/_posts/2022-04-26-#2.3.md
@@ -1,6 +1,7 @@
 ---
 title: "13: Time is Relative"
 last_modified_at: 2022-04-26T10:20:02-05:00
+author: Lukas Holler
 categories:
   - Blog
 tags:
@@ -21,22 +22,23 @@ The calculation is based on the following parameters:
 - Number of Files
 - Number of External Interfaces
 
-Instead of performing the calculation manually we used the following calculator to determine the function points: http://groups.umd.umich.edu/cis/course.des/cis525/js/f00/harvey/FP_Calc.html?tCountVal=0#FPCalc
+Instead of performing the calculation manually we used the following calculator to determine the function points: [link](http://groups.umd.umich.edu/cis/course.des/cis525/js/f00/harvey/FP_Calc.html?tCountVal=0#FPCalc) 
 
-![Use-Cases](/assets/images/risk-table.png)
 {% raw %}
-<iframe style="width: 100%; height: 200px;" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSSsadckaVqBLdA9DZbGnziP3yyenmTxh2J9b9lrnEbPYt2yJf_EFk9fl1_9rXvPNPPQMXdvGOh92Gj/pubhtml?widget=true&amp;headers=false"></iframe>
+<iframe style="width: 100%; height: 450px;" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSSsadckaVqBLdA9DZbGnziP3yyenmTxh2J9b9lrnEbPYt2yJf_EFk9fl1_9rXvPNPPQMXdvGOh92Gj/pubhtml?widget=true&amp;headers=false"></iframe>
 {% endraw %}
+
+![Use-Cases](https://raw.githubusercontent.com/DHBW-Experts/documents/main/UseCases/UseCase-Diagram.jpg)
 
 After calculated the function points for every use case, we determined if our estimation correlates with actual time, we spent to implement our Use-Cases in the last semester. To picture the connection, we used a scatter plot with points for every Use-Case of the 3rd Semester.
 
-![Graph](/assets/images/risk-table.png)
+![Graph](https://raw.githubusercontent.com/DHBW-Experts/documents/main/UseCases/FunctionPointsVsTimeSpent.png)
 
 As you can see in the graph, the time we spent on every Use-Case more ore less correlates with the estimation we made. Only the register-Use-Case is estimated way to high. The reason for that is that we only implemented a temporary registering solution last semester. As we start to implement our real registering solution this semester, the Use-Case will move farther to the right and start to correlate with out estimation.
 With the help of some Excel magic we calculated the following metrics for our project:
 
-- Time and FP correlate with a correlation-coefficient of X (good!)
-- For every FP we can estimate X hours of work 
+- Time and FP correlate with a correlation-coefficient of 0.78 (good!)
+- Every FP corresponds to 6 hours of work 
 
 Disclaimer: There is no time spent on the delete-User-Use-Case as the admins can delete Users by removing their entry on the database.
 
