--- a/_posts/2022-04-26-#2.3.md
+++ b/_posts/2022-04-26-#2.3.md
@@ -30,7 +30,7 @@ Instead of performing the calculation manually we used the following calculator 
 
 ![Use-Cases](https://raw.githubusercontent.com/DHBW-Experts/documents/main/UseCases/UseCase-Diagram.jpg)
 
-After calculated the function points for every use case, we determined if our estimation correlates with actual time, we spent to implement our Use-Cases in the last semester. To picture the connection, we used a scatter plot with points for every Use-Case of the 3rd Semester.
+After we calculated the function points for every use case, we determined if our estimation correlates with the actual time, we spent to implement our Use-Cases in the last semester. To picture the connection, we used a scatter plot with points for every Use-Case of the 3rd Semester.
 
 ![Graph](https://raw.githubusercontent.com/DHBW-Experts/documents/main/UseCases/FunctionPointsVsTimeSpent.png)
 
