--- a/_posts/2022-04-29-#2.4.md
+++ b/_posts/2022-04-29-#2.4.md
@@ -17,20 +17,20 @@ this week was all about setting up automated testing for the code of our client 
 Our app uses the Ionic framework combined with Angular.
 Angular comes with Jasmine, which is an open-source testing framework for JavaScript.
 The way Jasmine works is by running the npm test command. This command will run all the tests defined in .spec.ts files.
-Every angular page, service and component has its own separate test file, which is created when creating components, pages and services with the Angular CLI.
-To view the results of all the test, jasmine will automatically open a browser to display the test result. It can also rerun all test when files change.
+Every Angular page, service and component has its own separate test file, which is created when creating components, pages and services with the Angular CLI.
+To view the results of all the tests, Jasmine will automatically open a browser to display the test result. It can also rerun all test when files change.
 We found this overview a bit overwhelming and hard to navigate/work with.
-But luckily there is vs-code extension to help with this. It is called [Angular Karma Test Explorer](https://marketplace.visualstudio.com/items?itemName=raagh.angular-karma-test-explorer)
+But luckily there is VS Code extension to help with this. It is called [Angular Karma Test Explorer](https://marketplace.visualstudio.com/items?itemName=raagh.angular-karma-test-explorer)
 
 ![Test overview in VS Code](/assets/images/test_IDE.png)
 
-As you can see, most of our test are currently failing.
-This is due to the fact that most of these test are auto generated and are missing data, for example about the user.
+As you can see, most of our tests are currently failing.
+This is due to the fact that most of these tests are auto generated and are missing data, for example about the user.
 The way we are planning to deal with this is by using what is called a stub. A stub replaces a service.
 In our case, we recently rewrote our persistence class to be a service.
 Now we can use a stub in our tests to provide test data and not access our actual API.
 
-We are also planning to set up API testing using a postman testsuite.
+We are also planning to set up API testing using a Postman testsuite.
 That will take some time however, since we are currently adding authentication via OAuth to our API, to secure the data of our users.
 This means our API will have to restructured in order to make this possible.
 But we won't be going into too much detail about our authentication process just yet, since this is too big of a topic to cover here right now.
