Correct spelling mistake

--- a/_posts/2022-05-06-#2.5.md
+++ b/_posts/2022-05-06-#2.5.md
@@ -20,5 +20,5 @@ However, there is also one point we still like to improve more on, which is the 
 We also mentioned this when we talked about what we would change, if we'd have to start a new project. Having trouble with new programming languages and technologies should also be covered more properly when starting a project.
 Furthermore we would like to use Youtrack more intensively right from the beginning, this helps a lot to understand the task distribution in our team.
 
-To come to an End, we discussed how this has an impact on our working place in an professional environment. We came to the conclusion that agile software developement can be very useful, but only if it is used in the right way. Another point was the realisation that you can be much more productive if the team works together and not everyone for themself.
+To come to an End, we discussed how this has an impact on our working place in an professional environment. We came to the conclusion that agile software developement can be very useful, but only if it is used in the right way. Another point was the realisation that you can be much more productive if the team works together and not everyone for themselves.
  
