Correct spelling mistake #2

--- a/_posts/2022-05-06-#2.5.md
+++ b/_posts/2022-05-06-#2.5.md
@@ -11,7 +11,7 @@ tags:
 
 Hey Everyone,
 
-this week we did our second retrospective and therefore I will sum up our results compared to the first [retro](https://dhbw-experts.github.io/blog/08/). Let's start with positive stuff that we improved on. In the last ratro we mentioned our success with a working database and a clickable mock-up for our app.
+this week we did our second retrospective and therefore I will sum up our results compared to the first [retro](https://dhbw-experts.github.io/blog/08/). Let's start with positive stuff that we improved on. In the last retro we mentioned our success with a working database and a clickable mock-up for our app.
 We got a lot of work done regarding those topics and not only do we have a working app that is implemented and not just a mock-up, we also got an API to use the database more efficiently. To sum it up, we developed very well looking at our succeeded goals.
 
 The next question was if we had any topics that were difficult for us. In the first retro we noticed 3 things, two of them could get improved. That includes the struggle with a new programming language. By now, everyone is able to work and implement code for our app. The second struggle we got rid off is an overly ambitious scope for the semester. We should be able to get this semesters scope done.
