--- a/_posts/2022-05-27-#2.8.md
+++ b/_posts/2022-05-27-#2.8.md
@@ -12,7 +12,9 @@ tags:
 
 G'day mate,
 
-today I want to talk about how we use metrics and the associated tools to detect problems in our code and measure our improvement. We have decided to use sonarcloud for our metric analysis. After some work, we were able to integrate sonarcloud into our workflow. We have set it up in the following way: on every pull request, sonarcloud will automatically analyze the new code and give you an overview. It looks like this: ![SonarCloud analysis](/assets/images/sonar.png)
+today I want to talk about how we use metrics and the associated tools to detect problems in our code and measure our improvement. We have decided to use sonarcloud for our metric analysis (you can find our dashboard [here](https://sonarcloud.io/project/overview?id=DHBW-Experts_app)). After some work, we were able to integrate sonarcloud into our workflow. We have set it up in the following way: on every pull request, sonarcloud will automatically analyze the new code and give you an overview. It looks like this:
+
+![SonarCloud analysis](/assets/images/sonar.png)
 
 We have decided to work on cyclomatic complexity and cognitiv complexity. Cyclomatic complexitiy measures how many possible paths are there through a certain piece of code. The higher the cyclomatic complexity, the more test you will have to write. Cognitiv complexity determines how tricky a unit of code is to understand. This is important for everyone that will have to read and modify the code in the future.
 
