--- a/_posts/2022-05-27-#2.7.md
+++ b/_posts/2022-05-27-#2.7.md
@@ -26,7 +26,7 @@ The observer pattern is a software design pattern in which an object, named the 
 
 # How we realized it
 
-The first we did, was implementing a new angular service which is available everywhere in the app. By declaring the service as a singleton there is always only exactly one instance of the class, no matter how often you initialize it in any constructor. Doing that ensures that all the variables declared in the service are shared with the whole app. Furthermore, the UserState-service we created contains a method called “fetchUserInfo”. This method is responsible for fetching the updated info of the logged in user. Calling the method causes the isUserInfoAvailable-subject to emit the value false to all its subscribers meaning that a http-request is currently running. As soon as the data is fetched, the method subject emits the value true, notifying all subscribers that the service successfully fetched the user-info. 
+The first thing we did, was implementing a new angular service which is available everywhere in the app. By declaring the service as a singleton there is always only exactly one instance of the class, no matter how often you initialize it in any constructor. Doing that ensures that all the variables declared in the service are shared with the whole app. Furthermore, the UserState-service we created contains a method called “fetchUserInfo”. This method is responsible for fetching the updated info of the logged in user. Calling the method causes the isUserInfoAvailable-subject to emit the value false to all its subscribers meaning that a http-request is currently running. As soon as the data is fetched, the method subject emits the value true, notifying all subscribers that the service successfully fetched the user-info. 
 
 ![fetchUserInfo Method](/assets/images/user-state-fetchUserInfo.png)
 
