--- a/_posts/2022-06-10-#2.9.md
+++ b/_posts/2022-06-10-#2.9.md
@@ -8,3 +8,29 @@ tags:
   - deployment
   - installation
 ---
+
+Hello there,
+
+This week, in our 19th blog post, we explain how you can install our app, including the database and API, on your computer or a server.
+Until a few days ago we thought it was impossible, but after Lukas waved his magic wand, the whole installation process consists of just 4 simple steps:
+
+1. Install the latest version of Docker
+2. Download and run our [initialization script](https://github.com/DHBW-Experts/documents)<sup>1</sup>
+3. Adjust some config files<sup>2</sup>
+4. Run `docker-compose up --build` to build and start all containers
+
+Below are some footnotes that detail specific steps. We definitely recommend taking a look.
+
+If you have any problems or questions during the installation, feel free to ask them here in the comments.
+
+Good luck and best regards
+DHBW Experts
+
+\
+\
+\
+<sup>1</sup> There are some tricky spots and limitations when running the script.
+For example, it only works on Windows devices. On the one hand, this has to do with the fact that we are poor students who cannot afford expensive Apple devices, and on the other hand, we are just lazy and don't want to write multiple scripts for every possible operating system.
+Furthermore, Windows might display a security warning and recommend not running the script. But you can simply ignore this and run the script without hesitation. Just trust us 😏
+
+<sup>2</sup> 
