--- a/_posts/2022-06-10-#2.9.md
+++ b/_posts/2022-06-10-#2.9.md
@@ -12,15 +12,45 @@ tags:
 Hello there,
 
 This week, in our 19th blog post, we explain how you can install our app, including the database and API, on your computer or a server.
-Until a few days ago we thought it was impossible, but after Lukas waved his magic wand, the whole installation process consists of just 3+2 simple steps:
+Until a few days ago we thought it was impossible, but after Lukas waved his magic wand, the whole installation process consists of just 3+2 simple steps.
 
-1. Install the latest version of [Docker](https://www.docker.com/get-started/)
-2. Download and run our [initialization script](https://github.com/DHBW-Experts/documents)<sup>1</sup>
-3. Adjust some config files<sup>2</sup>
-4. Build and start all containers<sup>3</sup>
-5. Build the APK file and install it on your smartphone<sup>4</sup>
+## Prerequisites
+Heres what you will need to run our clients (Frontend, Backend, Database) and to be able to generate Android APKs
+- [Docker](https://docs.docker.com/desktop/windows/install/)
+- [Windows-Subsystem for Linux](https://docs.microsoft.com/en-us/windows/wsl/install-manual#step-4---download-the-linux-kernel-update-package)
+- [Node.js](https://nodejs.org/en/)
+- [Java 11](https://www.oracle.com/java/technologies/downloads/#java11-windows) 
+- Our [initialization script](https://github.com/DHBW-Experts/documents)<sup>1</sup>
 
-Below are some footnotes that detail specific steps. We definitely recommend taking a look.
+## Installation Guide
+### Clone the repository
+To make the installation easier, we created a script that clones our repository, generates files you will need later and installs global npm dependencies that might be missing.
+1. Download the `initialize-DHBW-Experts.cmd` script and place inside an empty folder called 'DHBW-Experts'.
+2. Run the script! <sup>2</sup>
+3. You will be prompted to specify the location of your Java 11 installation. <sup>3</sup>
+
+Excecution may take a while depending on your internet connection. Once the script is done your 'DHBW-Experts' folder will contain 3 more files, our app repository and our backend repository.
+
+### Run Frontend, Backend and Database
+To run our application in a browser environment open a command-line window and navigate to the DHBW-Experts folder. Run the following command `docker-compose up`. <sup>4</sup>
+
+Once the containers are up our applications will be available under the following adresses:
+- Frontend: `http://localhost:4200`
+- Backend: `http://localhost:4201`
+- Database: `http://localhost:1433`
+
+**DISCLAIMER: You won't be able to run our authentication Backend. It's hosted by Auth0.**
+
+### Build the Android APK
+Because our android app communicates to our remote backend by default, you will have to do some minor changes to our code to able to build a working APK.
+1. Run our `generate-apk.cmd` script
+2. Your default `.ts` editor should open and you will be prompted to edit the `api-domain` variable. <sup>5</sup>
+3. Change the variable to your computers IP Address on Port 4201 (e.g. `http://192.168.0.12:4200`). 
+4. Close the editor and press any button to continue the script.
+5. Once the script is done a folder should open with the `app-debug.apk` file. <sup>7</sup>
+6. Transfer the file to your phone and install the app.
+
+Below are some footnotes that detail specific infos. We definitely recommend taking a look.
 
 If you have any problems or questions during the installation, feel free to ask them here in the comments.
 
@@ -30,15 +60,18 @@ DHBW Experts
 \
 \
 \
+
 <sup>1</sup> There are some tricky spots and limitations when running the script.
 For example, it only works on Windows devices. On the one hand, this has to do with the fact that we are poor students who cannot afford expensive Apple devices, and on the other hand, we are just lazy and don't want to write multiple scripts for every possible operating system.
-Furthermore, Windows might display a security warning and recommend not running the script. But you can simply ignore this and run the script without hesitation. Just trust us 😏
 
-<sup>2</sup>
-`/app/src/environments`
-- Auth0 credentials
-- API URL
+<sup>2</sup> If Windows Defender asks you whether you are sure, click on 'run anyways'. You trust us, right? 😏
 
-<sup>3</sup> Run `docker-compose up --build` in the directory you executed the initialization script in. It will do everything for you.
+<sup>3</sup> Format: `C:\Program Files\Java\jdk-11.$.$$`
 
-<sup>4</sup> `generate-apk.cmd` script
+<sup>4</sup> If you change something in our code, use the `--build` flag to rebuild the container.
+
+<sup>5</sup> Path: `.\src\environments\environment.mobile.ts`
+
+<sup>6</sup> Your computer will act as our backend server, so make sure your ports are open and your Phone is able to communicate with your PC.
+
+<sup>7</sup> Path: `.\android\app\build\outputs\apk\debug\app-debug.apk`
