added script link

--- a/_posts/2022-06-10-#2.9.md
+++ b/_posts/2022-06-10-#2.9.md
@@ -20,7 +20,7 @@ Heres what you will need to run our clients (Frontend, Backend, Database) and to
 - [Windows-Subsystem for Linux](https://docs.microsoft.com/en-us/windows/wsl/install-manual#step-4---download-the-linux-kernel-update-package)
 - [Node.js](https://nodejs.org/en/)
 - [Java 11](https://www.oracle.com/java/technologies/downloads/#java11-windows) 
-- Our [initialization script](https://github.com/DHBW-Experts/documents)<sup>1</sup>
+- Our [initialization script](https://raw.githubusercontent.com/DHBW-Experts/documents/main/initialize-DHBW-Experts.cmd)<sup>1</sup>
 
 ## Installation Guide
 ### Clone the repository
