added presentation link templates

--- a/_posts/2022-06-22-#2.10.md
+++ b/_posts/2022-06-22-#2.10.md
@@ -75,6 +75,11 @@ in the following, you will find all the important links about our project. If th
 - [18: Metrics](https://dhbw-experts.github.io/blog/2.8/)
 - [19: Installation](https://dhbw-experts.github.io/blog/2.9/)
 
+## Presentations
+
+- [Midterm presentation]()
+- [Final Presentation]()
+
 ## Screencast of the application 
 
 - _TO DO_
