--- a/_posts/2022-06-22-#2.10.md
+++ b/_posts/2022-06-22-#2.10.md
@@ -77,8 +77,11 @@ in the following, you will find all the important links about our project. If th
 
 ## Presentations
 
-- [Midterm presentation]()
-- [Final Presentation]()
+- [Midterm presentation]() TODO
+- [Final Presentation]() TODO
+
+## "Archive"
+TODO __alles__ als zip ordner bereitstellen (source code, blog, etc)
 
 ## Screencast of the application 
 
