--- a/_posts/2022-06-22-#2.10.md
+++ b/_posts/2022-06-22-#2.10.md
@@ -17,6 +17,8 @@ in the following, you will find all the important links about our project. If th
 - [App](https://github.com/DHBW-Experts/app)
 - [Documents](https://github.com/DHBW-Experts/documents)
 - [Blog](https://github.com/DHBW-Experts/dhbw-experts.github.io)
+- [TODO FP Points](https://docs.google.com/spreadsheets/d/1T2VsLOnN02maV4aqMGr4TDLnyJXDZ0cdsshPNnPgkPU/edit#gid=0) TODO graph einfügen
+- TODO provide password
 
 ## Youtrack
 
@@ -24,6 +26,7 @@ in the following, you will find all the important links about our project. If th
 - [Sprint board](https://dhbw-karlsruhe.myjetbrains.com/youtrack/agiles/108-114/current)
 - Time spent per user:
 ![Time spent per user](/assets/images/time_spent_per_user.PNG)
+-[Burndown](https://dhbw-karlsruhe.myjetbrains.com/youtrack/reports/burndown/147-352) (more burndown charts can be found on our Youtrack dashboard)
 
 ## Other Tools
 
@@ -46,6 +49,11 @@ in the following, you will find all the important links about our project. If th
 - [SRS](https://github.com/DHBW-Experts/documents/blob/main/README.md)
 - [SAD](https://github.com/DHBW-Experts/documents/blob/main/SAD.md)
 - [Test plan on GitHub](https://github.com/DHBW-Experts/documents/blob/main/Test_Plan.md)
+
+## Tests
+- [API-Test (Postman test)]([https://github.com/DHBW-Experts/documents/blob/main/README.md](https://github.com/DHBW-Experts/db-backend/blob/main/Postman_Collections/DHBW-Experts.postman_collection.json))
+- [UnitTest]([https://github.com/DHBW-Experts/documents/blob/main/README.md](https://github.com/DHBW-Experts/app/blob/main/src/app/shared/modules/foreign-profile/foreign-profile.page.spec.ts))
+- A detailed execution log can be found [here](https://github.com/DHBW-Experts/app/actions/workflows/test.yml). This shows all the automated test runs via Github actions. The Coverage can also be found here. TODO insert screenshot
 
 ## Blog posts
 
