--- a/_posts/2022-06-22-#2.10.md
+++ b/_posts/2022-06-22-#2.10.md
@@ -32,6 +32,15 @@ in the following, you will find all the important links about our project. If th
 
 - [Discord](https://discord.com/) for communication
 - [Visual Studio Code](https://code.visualstudio.com/) for coding
+- [Github Actions](https://github.com/DHBW-Experts/app/actions)
+
+## Tech Stack
+- [SonarCloud](https://sonarcloud.io/summary/new_code?id=DHBW-Experts_app)
+- Ionic with Angular (Typescript, SCSS, HTML)
+- Auth0
+- Azure Database
+- Jasmine
+- Docker
 
 ## Use Case Specifications
 
@@ -54,6 +63,10 @@ in the following, you will find all the important links about our project. If th
 - [API-Test (Postman test)]([https://github.com/DHBW-Experts/documents/blob/main/README.md](https://github.com/DHBW-Experts/db-backend/blob/main/Postman_Collections/DHBW-Experts.postman_collection.json))
 - [UnitTest]([https://github.com/DHBW-Experts/documents/blob/main/README.md](https://github.com/DHBW-Experts/app/blob/main/src/app/shared/modules/foreign-profile/foreign-profile.page.spec.ts))
 - A detailed execution log can be found [here](https://github.com/DHBW-Experts/app/actions/workflows/test.yml). This shows all the automated test runs via Github actions. The Coverage can also be found here. TODO insert screenshot
+
+##Quality
+- [Risk management](https://docs.google.com/spreadsheets/d/1falTIQkIQSTLZd_tVhuxKRq68DcY8aF4oG557i4VYQY/edit#gid=0)
+- Design pattern can be found in the coresponding blogpost
 
 ## Blog posts
 
