insert presentation links

--- a/_posts/2022-06-22-#2.10.md
+++ b/_posts/2022-06-22-#2.10.md
@@ -98,8 +98,8 @@ in the following, you will find all the important links about our project. If th
 
 ## Presentations
 
-- [Midterm presentation]() TODO
-- [Final Presentation]() TODO
+- [Midterm presentation](https://docs.google.com/presentation/d/1XqeR1_1xZJL9f-D52ULX5Xmwo--IXY-aeFDyPZs23xo/edit#slide=id.g107339c718f_0_5)
+- [Final Presentation](https://docs.google.com/presentation/d/1392irL-dkMsJL6hY0ppMv6znGkSTs-p931ir0OAq9So/edit#slide=id.g134a109f706_0_23513)
 
 ## "Archive"
 TODO __alles__ als zip ordner bereitstellen (source code, blog, etc)
