--- a/_posts/2022-06-22-#2.10.md
+++ b/_posts/2022-06-22-#2.10.md
@@ -17,7 +17,7 @@ in the following, you will find all the important links about our project. If th
 - [App](https://github.com/DHBW-Experts/app)
 - [Documents](https://github.com/DHBW-Experts/documents)
 - [Blog](https://github.com/DHBW-Experts/dhbw-experts.github.io)
-- [TODO FP Points](https://docs.google.com/spreadsheets/d/1T2VsLOnN02maV4aqMGr4TDLnyJXDZ0cdsshPNnPgkPU/edit#gid=0) TODO graph einfügen
+- [FP Points Documents](https://docs.google.com/spreadsheets/d/1T2VsLOnN02maV4aqMGr4TDLnyJXDZ0cdsshPNnPgkPU/edit#gid=0) ![Function Point Graph](/assets/images/FP.png)
 - TODO provide password
 
 ## Youtrack
@@ -25,8 +25,7 @@ in the following, you will find all the important links about our project. If th
 - [Dashboard](https://dhbw-karlsruhe.myjetbrains.com/youtrack/projects/a083958c-208a-4101-ae18-0a908553b15d)
 - [Sprint board](https://dhbw-karlsruhe.myjetbrains.com/youtrack/agiles/108-114/current)
 - Time spent per user:
-![Time spent per user](/assets/images/time_spent_per_user.PNG)
--[Burndown](https://dhbw-karlsruhe.myjetbrains.com/youtrack/reports/burndown/147-352) (more burndown charts can be found on our Youtrack dashboard)
+  ![Time spent per user](/assets/images/time_spent_per_user.PNG) -[Burndown](https://dhbw-karlsruhe.myjetbrains.com/youtrack/reports/burndown/147-352) (more burndown charts can be found on our Youtrack dashboard)
 
 ## Other Tools
 
@@ -35,6 +34,7 @@ in the following, you will find all the important links about our project. If th
 - [Github Actions](https://github.com/DHBW-Experts/app/actions)
 
 ## Tech Stack
+
 - [SonarCloud](https://sonarcloud.io/summary/new_code?id=DHBW-Experts_app)
 - Ionic with Angular (Typescript, SCSS, HTML)
 - Auth0
@@ -46,7 +46,7 @@ in the following, you will find all the important links about our project. If th
 
 - [All Use Cases in specific](https://github.com/DHBW-Experts/documents/tree/main/UseCases)
 - Use Case Diagram:
-![Use Case Diagram](https://raw.githubusercontent.com/DHBW-Experts/documents/main/UseCases/UseCase-Diagram.jpg)
+  ![Use Case Diagram](https://raw.githubusercontent.com/DHBW-Experts/documents/main/UseCases/UseCase-Diagram.jpg)
 
 ## Feature Files
 
@@ -60,11 +60,13 @@ in the following, you will find all the important links about our project. If th
 - [Test plan on GitHub](https://github.com/DHBW-Experts/documents/blob/main/Test_Plan.md)
 
 ## Tests
-- [API-Test (Postman test)]([https://github.com/DHBW-Experts/documents/blob/main/README.md](https://github.com/DHBW-Experts/db-backend/blob/main/Postman_Collections/DHBW-Experts.postman_collection.json))
-- [UnitTest]([https://github.com/DHBW-Experts/documents/blob/main/README.md](https://github.com/DHBW-Experts/app/blob/main/src/app/shared/modules/foreign-profile/foreign-profile.page.spec.ts))
-- A detailed execution log can be found [here](https://github.com/DHBW-Experts/app/actions/workflows/test.yml). This shows all the automated test runs via Github actions. The Coverage can also be found here. TODO insert screenshot
+
+- [API-Test (Postman test)](<[https://github.com/DHBW-Experts/documents/blob/main/README.md](https://github.com/DHBW-Experts/db-backend/blob/main/Postman_Collections/DHBW-Experts.postman_collection.json)>)
+- [UnitTest](<[https://github.com/DHBW-Experts/documents/blob/main/README.md](https://github.com/DHBW-Experts/app/blob/main/src/app/shared/modules/foreign-profile/foreign-profile.page.spec.ts)>)
+- A detailed execution log can be found [here](https://github.com/DHBW-Experts/app/actions/workflows/test.yml). This shows all the automated test runs via Github actions. The Coverage can also be found there ![Jasmine Test Run](/assets/images/GithubActionsJasmineRun.png)
 
 ##Quality
+
 - [Risk management](https://docs.google.com/spreadsheets/d/1falTIQkIQSTLZd_tVhuxKRq68DcY8aF4oG557i4VYQY/edit#gid=0)
 - Design pattern can be found in the coresponding blogpost
 
@@ -102,9 +104,10 @@ in the following, you will find all the important links about our project. If th
 - [Final Presentation](https://docs.google.com/presentation/d/1392irL-dkMsJL6hY0ppMv6znGkSTs-p931ir0OAq9So/edit#slide=id.g134a109f706_0_23513)
 
 ## "Archive"
-TODO __alles__ als zip ordner bereitstellen (source code, blog, etc)
 
-## Screencast of the application 
+TODO **alles** als zip ordner bereitstellen (source code, blog, etc)
+
+## Screencast of the application
 
 - _TO DO_
-![alt text](https://github.com/DHBW-Experts/documents/blob/main/UI/App-Screencast.gif?raw=true)
+  ![alt text](https://github.com/DHBW-Experts/documents/blob/main/UI/App-Screencast.gif?raw=true)
