--- a/_posts/2022-06-22-#2.10.md
+++ b/_posts/2022-06-22-#2.10.md
@@ -63,9 +63,9 @@ in the following, you will find all the important links about our project. If th
 
 - [API-Test (Postman test)](<[https://github.com/DHBW-Experts/documents/blob/main/README.md](https://github.com/DHBW-Experts/db-backend/blob/main/Postman_Collections/DHBW-Experts.postman_collection.json)>)
 - [UnitTest](<[https://github.com/DHBW-Experts/documents/blob/main/README.md](https://github.com/DHBW-Experts/app/blob/main/src/app/shared/modules/foreign-profile/foreign-profile.page.spec.ts)>)
-- A detailed execution log can be found [here](https://github.com/DHBW-Experts/app/actions/workflows/test.yml). This shows all the automated test runs via Github actions. The Coverage can also be found there ![Jasmine Test Run](/assets/images/GithubActionsJasmineRun.png)
+- A detailed execution log can be found [here](https://github.com/DHBW-Experts/app/actions/workflows/test.yml). This shows all the automated test run via Github actions. The Coverage can also be found there ![Jasmine Test Run](/assets/images/GithubActionsJasmineRun.png)
 
-##Quality
+## Quality
 
 - [Risk management](https://docs.google.com/spreadsheets/d/1falTIQkIQSTLZd_tVhuxKRq68DcY8aF4oG557i4VYQY/edit#gid=0)
 - Design pattern can be found in the coresponding blogpost
